feat: add PostgreSQL database and CRUD operations
- Add PostgreSQL to Docker Compose with init script
- Create JPA entities with Panache (Destination, Provider, Events)
- Implement CRUD repositories and services
- Add REST endpoints for destinations and providers
- Update alert aggregation to persist to database
- Add comprehensive data seeding
- Create backlog with checklists for tracking progress